# KiriksCFD

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
fluid-exam-visualiser/: CMakeLists.txt  README.md
fluid-exam-visualiser/src/: main.cpp
fluid-exam-visualiser/src/app/: App.cpp  App.hpp  CameraController.cpp  CameraController.hpp
fluid-exam-visualiser/src/cases/: AtmosphericColumnCase.cpp  AtmosphericColumnCase.hpp  BaroclinicInstabilityCase.cpp  BaroclinicInstabilityCase.hpp  BarotropicInstabilityCase.cpp  BarotropicInstabilityCase.hpp  BoundaryLayerCase.cpp  BoundaryLayerCase.hpp  BruntVaisalaCase.cpp  BruntVaisalaCase.hpp  CoordinateOperatorsCase.cpp  CoordinateOperatorsCase.hpp  CouetteFlowCase.cpp  CouetteFlowCase.hpp  DiffusionSimilarityCase.cpp  DiffusionSimilarityCase.hpp  EkmanCase.cpp  EkmanCase.hpp  FlowCommon.hpp  GeostrophicBalanceCase.cpp  GeostrophicBalanceCase.hpp  HelicityCase.cpp  HelicityCase.hpp  ICase.hpp  InclinedFilmFlowCase.cpp  InclinedFilmFlowCase.hpp  InertiaGravityWaveCase.cpp  InertiaGravityWaveCase.hpp  KelvinWaveCase.cpp  KelvinWaveCase.hpp  MoistThermodynamicsCase.cpp  MoistThermodynamicsCase.hpp  OceanCirculationCase.cpp  OceanCirculationCase.hpp  PipeFlowCase.cpp  PipeFlowCase.hpp  QGPVCase.cpp  QGPVCase.hpp  ReynoldsScalingCase.cpp  ReynoldsScalingCase.hpp  (+27 more)
fluid-exam-visualiser/src/math/: Derivatives.cpp  Derivatives.hpp  Streamline.cpp  Streamline.hpp  VecField3D.cpp  VecField3D.hpp
fluid-exam-visualiser/src/render/: ArrowRenderer.cpp  ArrowRenderer.hpp  ColorMap.cpp  ColorMap.hpp  SurfaceRenderer.cpp  SurfaceRenderer.hpp  TubeRenderer.cpp  TubeRenderer.hpp
fluid-exam-visualiser/src/ui/: CaseNoteLinks.cpp  CaseNoteLinks.hpp  UiPanel.cpp  UiPanel.hpp
